--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,39 +1,117 @@
-.main {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    color: black;
-    background-color: antiquewhite;
-    font-size: 2em;
-    padding: 5px;
+body {
+    background-color: #3d3232;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
-.form {
+#container {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#user-options{
+    color: whitesmoke;
+    margin-top: 5px;
+}
+
+#logo{
+    color: whitesmoke;
+    margin-top: 20px;
+    font-size: 40px;
+    letter-spacing: 3px;
+    font-weight: 900;
+}
+#map-bar{
+    background-color: #452828;
+    color: whitesmoke;
+    margin-top: 20px;
+    font-size: 10px;
+}
+#content{
+    float: left;
+    background-color: #a89470;
+    margin-top: 20px;
+    min-height: 800px;
+    width: 838px;
+    padding: 30px;
+    font-size: 18px;
+    border-right: 2px solid whitesmoke;
+}
+#best-events{
+    float: left;
+    background-color: #a89470;
+    margin-top: 20px;
+    min-height: 800px;
+    width: 238px;
+    padding: 30px;
+
+}
+
+.title{
+    font-size: 22px;
+    font-weight: 900;
+}
+
+.optionT{
+    float: left;
+    min-width: 60px;
+    height: 25px;
+    font-size: 12px;
+    padding: 10px;
+}
+.option{
+    float: left;
+    min-width: 128px;
+    height: 25px;
+    font-size: 18px;
+    padding: 10px;
+    border-right: 2px solid whitesmoke;
+    opacity: 0.8;
+}
+
+.eventO{
+    float: top;
+    min-width: 214px;
+    min-height: 120px;
+    padding: 10px;
+    border: 2px solid black;
+    margin-top: 5px;
+}
+.optionT:hover{
+    color: #477942;
+    cursor: pointer;
+}
+.option:hover{
+    background-color: #477942;
+    cursor: pointer;
+}
+.eventO:hover{
+    background-color: #937f56;
+    cursor: pointer;
+}
+.in-use{
+    color: gray;
+    float: left;
+    min-width: 60px;
+    height: 25px;
+    font-size: 12px;
+    padding: 10px;
+}
+.form{
+    height: 25px;
+    padding: 10px;
+}
+.formL{
     display: inline-block;
-    width: 100em;
-    text-align: left;
-    flex-direction: row;
-    align-items: center;
-    color: black;
-    background-color: darkseagreen;
-    font-size: 1.5em;
-    padding: 5px;
+    min-width: 140px;
 }
-
-.user_page {
-    display: flex;
-    align-items: flex-start;
-    color: black;
-    background-color: antiquewhite;
-    font-size: 1.5em;
-    padding: 5px;
-}
-
-
-input {
+.formI{
     display: inline-block;
-    border-radius: 4px;
-    background-color: antiquewhite;
-    width: 300px;
-    align-items: flex-end;
+    min-width: 250px;
 }
+.button{
+    font-weight: 900;
+    padding: 5px;
+    font-size: 20px;
+}
+
