--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
-    <title>First Page</title>
+    <title>Main Page</title>
     <link rel="stylesheet" href="/webjars/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <div id="container">
     <div id="user-options">
-        <div class="optionT">Log In</div>
+        <div class="optionT"><a href="login-user">Log In</div>
 
         <div class="optionT"><a href="register">Create Account</a></div>
 
