--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -8,7 +8,7 @@
     <title>Upcoming events</title>
 </head>
 <body>
-<div id="upcoming-events" th:each="event : ${events}">
+<div id="upcoming-events" th:each="event : ${events.getEventModels()}">
     <div>
         <p id="event-title" th:text="${event.title}">TITLE</p><br/>
         <span id="event-host" th:text="${event.hostUsername}">HOST</span><span th:text=" ${event.address}"></span><br/>
